--- a/oadmin/src/main/resources/application.conf
+++ b/oadmin/src/main/resources/application.conf
@@ -4,7 +4,7 @@ refresh-token-session-lifetime = 54000 // 15 days
 
 super-user-id = "a0329faa-f862-43a9-aef5-2bccd74d1d61"
 
-super-user-username = "root@oadmin.o"
+super-user-email = "root@oadmin.o"
 
 super-user-firstname = "Amadou"
 
@@ -29,6 +29,32 @@ db.database-max-pool-size = "4"
 db.database-min-pool-size = "2"
 
 oauth2-mac-algo = "hmac-sha-1"
+
+# In this file you can override any option defined in the reference files.
+# Copy in parts of the reference files and modify as you please.
+ 
+akka {
+ 
+  # Loggers to register at boot time (akka.event.Logging$DefaultLogger logs
+  # to STDOUT) "akka.event.slf4j.Slf4jLogger"
+  loggers = ["akka.event.Logging$DefaultLogger"]
+ 
+  # Log level used by the configured loggers (see "loggers") as soon
+  # as they have been started; before that, see "stdout-loglevel"
+  # Options: OFF, ERROR, WARNING, INFO, DEBUG
+  loglevel = DEBUG
+ 
+  # Log level for the very basic logger activated during AkkaApplication startup
+  # Options: OFF, ERROR, WARNING, INFO, DEBUG
+  stdout-loglevel = DEBUG
+ 
+  actor {
+    default-dispatcher {
+      # Throughput for default Dispatcher, set to 1 for as fair as possible
+      throughput = 10
+    }
+  }
+}
 
 
 
