--- a/oadmin/src/main/resources/application.conf
+++ b/oadmin/src/main/resources/application.conf
@@ -18,7 +18,7 @@ administrator-role-name = "Administrator"
 
 db.database-driver-class = "org.postgresql.Driver"
 
-db.database-url = "jdbc:postgresql://localhost:5432/schola"
+db.database-url = "jdbc:postgresql://127.0.0.1:5432/schola"
 
 db.database-username = "postgres"
 
@@ -29,6 +29,20 @@ db.database-max-pool-size = "4"
 db.database-min-pool-size = "2"
 
 oauth2-mac-algo = "hmac-sha-1"
+
+mongodb.hostname = "127.0.0.1"
+
+mongodb.dbname = "schola"
+
+mongodb.dbport = 27017
+
+mongodb.dbcollection = "users_avatars"
+
+jade.template-dir = "src/main/resources/templates"
+
+default_avatar.male = "/static/public/images/avatar_male.png"
+
+default_avatar.female = "/static/public/images/avatar_female.png"
 
 # In this file you can override any option defined in the reference files.
 # Copy in parts of the reference files and modify as you please.
