some optimizatios with value classes

--- a/oadmin/src/main/resources/application.conf
+++ b/oadmin/src/main/resources/application.conf
@@ -28,7 +28,7 @@ db.database-max-pool-size = "4"
 
 db.database-min-pool-size = "2"
 
-oauth2-mac-algo = "hmac-sha-1"
+oauth2-mac-algorithm = "hmac-sha-1"
 
 mongodb.hostname = "127.0.0.1"
 
