initial support for caching

--- a/oadmin/src/main/resources/application.conf
+++ b/oadmin/src/main/resources/application.conf
@@ -38,6 +38,24 @@ mongodb.dbport = 27017
 
 mongodb.dbcollection = "users_avatars"
 
+# Memcached settings
+
+memcached = "enabled"
+
+# memcached.user = ""
+
+# memcached.password = ""
+
+memcached.namespace = "oadmin"
+
+# memcached.hashkeys = ""
+
+memcached.host = "127.0.0.1"
+
+memcached.timeout = 1
+
+memcached.timeunit = "seconds"
+
 jade.template-dir = "src/main/resources/templates"
 
 default_avatar.male = "/static/public/images/avatar_male.png"
