more on caching...

--- a/oadmin/src/main/resources/application.conf
+++ b/oadmin/src/main/resources/application.conf
@@ -40,7 +40,7 @@ mongodb.dbcollection = "users_avatars"
 
 # Memcached settings
 
-memcached = "enabled"
+# memcached.disabled = yes
 
 # memcached.user = ""
 
