more caching fixes and optimizations...

--- a/oadmin/src/main/resources/application.conf
+++ b/oadmin/src/main/resources/application.conf
@@ -40,7 +40,7 @@ mongodb.dbcollection = "users_avatars"
 
 # Memcached settings
 
-# memcached.disabled = yes
+memcached.enabled = no
 
 # memcached.user = ""
 
@@ -48,7 +48,7 @@ mongodb.dbcollection = "users_avatars"
 
 memcached.namespace = "oadmin"
 
-# memcached.hashkeys = ""
+memcached.hashkeys = yes
 
 memcached.host = "127.0.0.1:11211"
 
