--- a/oadmin/src/main/resources/application.conf
+++ b/oadmin/src/main/resources/application.conf
@@ -40,7 +40,7 @@ mongodb.dbcollection = "users_avatars"
 
 # Memcached settings
 
-memcached.enabled = no
+memcached.enabled = yes
 
 # memcached.user = ""
 
@@ -52,7 +52,7 @@ memcached.hashkeys = yes
 
 memcached.host = "127.0.0.1:11211"
 
-memcached.timeout = 1
+memcached.timeout = 10
 
 memcached.timeunit = "seconds"
 
