using async plans all over

--- a/oadmin/src/main/resources/application.conf
+++ b/oadmin/src/main/resources/application.conf
@@ -40,7 +40,7 @@ mongodb.dbcollection = "users_avatars"
 
 # Memcached settings
 
-memcached.enabled = yes
+# memcached.enabled = yes
 
 # memcached.user = ""
 
