initial work on login, password change and index retrieval

--- a/oadmin/src/main/resources/application.conf
+++ b/oadmin/src/main/resources/application.conf
@@ -40,7 +40,7 @@ mongodb.dbcollection = "users_avatars"
 
 # Memcached settings
 
-# memcached.enabled = yes
+memcached.enabled = yes
 
 # memcached.user = ""
 
@@ -52,11 +52,11 @@ memcached.hashkeys = yes
 
 memcached.host = "127.0.0.1:11211"
 
-memcached.timeout = 10
+memcached.timeout = 60
 
 memcached.timeunit = "seconds"
 
-jade.template-dir = "src/main/resources/templates"
+jade.template-dir = "src/main/resources/static/public"
 
 default_avatar.male = "/static/public/images/avatar_male.png"
 
