more work on login, changepasswd, index retrieval; done with pro-active caching; more caching with roles; fixes, ...

--- a/oadmin/src/main/resources/application.conf
+++ b/oadmin/src/main/resources/application.conf
@@ -4,7 +4,7 @@ refresh-token-session-lifetime = 54000 // 15 days
 
 super-user-id = "a0329faa-f862-43a9-aef5-2bccd74d1d61"
 
-super-user-email = "root@oadmin.o"
+super-user-email = "root@oadmin.pro"
 
 super-user-firstname = "Amadou"
 
