use compiled queries - performance boost; better user insertion with auto-generated uuids; bug fixes

--- a/oadmin/src/main/resources/application.conf
+++ b/oadmin/src/main/resources/application.conf
@@ -1,6 +1,6 @@
-access-token-session-lifetime = 3600 // a day
+access-token-session-lifetime = 3600 // an hour
 
-refresh-token-session-lifetime = 54000 // 15 days
+refresh-token-session-lifetime = 604800 // 7 days
 
 super-user-id = "a0329faa-f862-43a9-aef5-2bccd74d1d61"
 
