major changes: better caked services; domain & schema changes; more work on login, changepasswd, editprofile, lostpasswd, ...; bug fixes

--- a/oadmin/src/main/resources/application.conf
+++ b/oadmin/src/main/resources/application.conf
@@ -1,66 +1,101 @@
-access-token-session-lifetime = 3600 // an hour
 
-refresh-token-session-lifetime = 604800 // 7 days
+oadmin {
 
-super-user-id = "a0329faa-f862-43a9-aef5-2bccd74d1d61"
+  secret = "0f6872fa0f80ae5b2560aab5"
 
-super-user-email = "root@oadmin.pro"
+  recaptcha {
+    
+    public_key = "6LeFSewSAAAAAFdPcZX6TzeAwP-xUB0vDyvLGpgm"
 
-super-user-firstname = "Amadou"
+    private_key = "6LeFSewSAAAAAOyuGTuHsAErPwwxU9ZOHjppLVpf"
+  }
 
-super-user-lastname = "Cisse"
+  oauth2 {
 
-super-user-password = "amsayk"
+    access-token-session-lifetime = 3600 # an hour
 
-super-user-role-name = "SuperUser"
+    refresh-token-session-lifetime = 604800 # 7 days
 
-administrator-role-name = "Administrator"
+    super-user-role-name = "Super User"
 
-db.database-driver-class = "org.postgresql.Driver"
+    administrator-role-name = "Administrator"
 
-db.database-url = "jdbc:postgresql://127.0.0.1:5432/schola"
+    mac-algorithm = "hmac-sha-1"
+  }
 
-db.database-username = "postgres"
+  root {
 
-db.database-password = "1234"
+    id = "a0329faa-f862-43a9-aef5-2bccd74d1d61"
 
-db.database-max-pool-size = "4"
+    primaryEmail = "root@oadmin.pro"
 
-db.database-min-pool-size = "2"
+    givenName = "Amadou"
 
-oauth2-mac-algorithm = "hmac-sha-1"
+    familyName = "Cisse"
 
-mongodb.hostname = "127.0.0.1"
+    password = "amsayk"
+  }
 
-mongodb.dbname = "schola"
+  db {
 
-mongodb.dbport = 27017
+    driver-class = "org.postgresql.Driver"
 
-mongodb.dbcollection = "users_avatars"
+    url = "jdbc:postgresql://127.0.0.1:5432/schola"
 
-# Memcached settings
+    user = "postgres"
 
-# memcached.enabled = yes
+    password = "1234"
 
-# memcached.user = ""
+    max-pool-size = "4"
 
-# memcached.password = ""
+    min-pool-size = "2"
+  }
 
-memcached.namespace = "oadmin"
+  mongodb {
 
-memcached.hashkeys = yes
+    hostname = "127.0.0.1"
 
-memcached.host = "127.0.0.1:11211"
+    dbname = "schola"
 
-memcached.timeout = 60
+    port = 27017
 
-memcached.timeunit = "seconds"
+    dbcollection = "users_avatars"
+  }
 
-jade.template-dir = "src/main/resources/static/public"
+  memcached {
 
-default_avatar.male = "/static/public/images/avatar_male.png"
+    enabled = no
 
-default_avatar.female = "/static/public/images/avatar_female.png"
+    # user = ""
+
+    # password = ""
+
+    namespace = "oadmin"
+
+    hashkeys = yes
+
+    host = "127.0.0.1:11211"
+
+    # host.1 = ""
+
+    timeout = "60 seconds"
+  }
+
+  cache {
+    max-ttl = 1800
+  }
+
+  templates {
+    dir = "src/main/resources/static/public"
+  }
+
+  avatars {
+
+    male = "/static/public/images/avatar_male.png"
+
+    female = "/static/public/images/avatar_female.png"
+  }
+}
 
 # In this file you can override any option defined in the reference files.
 # Copy in parts of the reference files and modify as you please.
@@ -69,7 +104,7 @@ akka {
  
   # Loggers to register at boot time (akka.event.Logging$DefaultLogger logs
   # to STDOUT) "akka.event.slf4j.Slf4jLogger"
-  loggers = ["akka.event.Logging$DefaultLogger"]
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
  
   # Log level used by the configured loggers (see "loggers") as soon
   # as they have been started; before that, see "stdout-loglevel"
