added mailer; implemented all of frontend client features; lots of bugfixes, tweaks, . . .

--- a/oadmin/src/main/resources/application.conf
+++ b/oadmin/src/main/resources/application.conf
@@ -3,11 +3,41 @@ oadmin {
 
   secret = "0f6872fa0f80ae5b2560aab5"
 
+  max-upload-size = 5
+
+  api_version = "v1"
+
+  password-min-length = 6
+
   recaptcha {
     
     public_key = "6LeFSewSAAAAAFdPcZX6TzeAwP-xUB0vDyvLGpgm"
 
     private_key = "6LeFSewSAAAAAOyuGTuHsAErPwwxU9ZOHjppLVpf"
+  }
+
+  smtp {
+
+    mock = no
+
+    # mailhub = "smtp.enim.ac.ma"
+    mailhub = "smtp.gmail.com"
+
+    port = 587
+
+    ssl = no
+
+    tls = yes
+
+    from = "Administrator <noreply@oadmin.pro>"
+
+    # username = "notifications@enim.ac.ma"
+    user = "cisse.amadou.9@gmail.com"
+
+    # password = "nagiosadm0"
+    password = "googprnarnia"
+
+    debug = no
   }
 
   oauth2 {
@@ -86,7 +116,7 @@ oadmin {
   }
 
   templates {
-    dir = "src/main/resources/static/public"
+    dir = "src/main/templates"
   }
 
   avatars {
@@ -110,16 +140,32 @@ akka {
   # as they have been started; before that, see "stdout-loglevel"
   # Options: OFF, ERROR, WARNING, INFO, DEBUG
   loglevel = DEBUG
- 
+
   # Log level for the very basic logger activated during AkkaApplication startup
   # Options: OFF, ERROR, WARNING, INFO, DEBUG
   stdout-loglevel = DEBUG
  
   actor {
+
     default-dispatcher {
       # Throughput for default Dispatcher, set to 1 for as fair as possible
       throughput = 10
-    }
+    }    
+
+    deployment {
+      
+      /avatars/Avatars_upload-workers {
+        
+        router = random-pool
+        
+        nr-of-instances = 5
+        
+        pool-dispatcher {
+          type = BalancingDispatcher
+        }
+      }
+
+    }    
   }
 }
 
