now using reactive-mongo with better uploads and downloads; fix caching n improved cache invalidation; plus more tweaks and many fixes

--- a/oadmin/src/main/resources/reference.conf
+++ b/oadmin/src/main/resources/reference.conf
@@ -83,13 +83,11 @@ oadmin {
 
   mongodb {
 
-    hostname = "127.0.0.1"
+    host = "127.0.0.1:27017"
 
-    dbname = "schola"
+    db = "schola"
 
-    port = 27017
-
-    dbcollection = "users_avatars"
+    collection = "users_avatars"
   }
 
   memcached {
