more tweaks and improvements

--- a/oadmin/src/main/resources/reference.conf
+++ b/oadmin/src/main/resources/reference.conf
@@ -11,9 +11,9 @@ oadmin {
 
   recaptcha {
     
-    public_key = "6LeFSewSAAAAAFdPcZX6TzeAwP-xUB0vDyvLGpgm"
+    public-key = "6LeFSewSAAAAAFdPcZX6TzeAwP-xUB0vDyvLGpgm"
 
-    private_key = "6LeFSewSAAAAAOyuGTuHsAErPwwxU9ZOHjppLVpf"
+    private-key = "6LeFSewSAAAAAOyuGTuHsAErPwwxU9ZOHjppLVpf"
   }
 
   smtp {
@@ -66,28 +66,11 @@ oadmin {
     password = "amsayk"
   }
 
-  db {
-
-    driver-class = "org.postgresql.Driver"
-
-    url = "jdbc:postgresql://127.0.0.1:5432/schola"
-
-    user = "postgres"
-
-    password = "1234"
-
-    max-pool-size = "4"
-
-    min-pool-size = "2"
-  }
-
   mongodb {
 
     host = "127.0.0.1:27017"
 
     db = "schola"
-
-    collection = "users_avatars"
   }
 
   memcached {
@@ -159,7 +142,7 @@ akka {
         
         router = random-pool
         
-        nr-of-instances = 5
+        nr-of-instances = 4
         
         pool-dispatcher {
           type = BalancingDispatcher
