Use xxHash for memcached nodeLocator; many refactorings and bug fixes

--- a/http-play2/conf/application.conf
+++ b/http-play2/conf/application.conf
@@ -45,6 +45,15 @@ application.context = "/api/v1/"
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
+smtp.mock=yes
+smtp.host="smtp.gmail.com"
+smtp.port=587
+smtp.ssl=no
+smtp.tls=yes
+smtp.user="cisse.amadou.9@gmail.com"
+smtp.password="********"
+smtp.from="Administrator <noreply@oadmin.pro>"
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
@@ -57,7 +66,7 @@ application.context = "/api/v1/"
 #
 # ebean.default="models.*"
 
-akka.default-dispatcher.fork-join-executor.pool-size-max =64
+akka.default-dispatcher.fork-join-executor.pool-size-max = 64
 akka.actor.debug.receive = on
 
 # In this file you can override any option defined in the reference files.
