--- a/util/src/main/resources/reference.conf
+++ b/util/src/main/resources/reference.conf
@@ -13,30 +13,6 @@ oadmin {
 
   password-min-length = 4
 
-  smtp {
-
-    mock = yes
-
-    # mailhub = "smtp.enim.ac.ma"
-    mailhub = "smtp.gmail.com"
-
-    port = 587
-
-    ssl = no
-
-    tls = yes
-
-    from = "Administrator <noreply@oadmin.pro>"
-
-    # username = "notifications@enim.ac.ma"
-    user = "cisse.amadou.9@gmail.com"
-
-    # password = "********"
-    password = "googprnarnia"
-
-    debug = no
-  }
-
   oauth2 {
 
     access-token-session-lifetime = 3600 # an hour
@@ -72,15 +48,13 @@ oadmin {
 
   memcached {
 
-    enabled = no
+    enabled = yes
 
     # user = ""
 
     # password = ""
 
     namespace = "oadmin"
-
-    hashkeys = yes
 
     host = "127.0.0.1:11211"
 
