--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oadmin",
-  "version": "0.5.0-Beta",
+  "version": "0.7.0",
   "dependencies": {
     "es5-shimify": "~2.0.5",
     "json2ify": "~0.0.3",
