initial IS of schools done; common + course management services implemented; bug fixes and other enhancements...

--- a/http/conf/application.conf
+++ b/http/conf/application.conf
@@ -6,6 +6,7 @@
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
 application.secret="g7TpPq^a7Q=Og`>Wj`@NbiswMVGG7_p[:hA0Xxs?Eih8Ksnh_;aD;lt]g8<1Ka^w"
+application.secret=${?APPLICATION_SECRET}
 
 # The application languages
 # ~~~~~
@@ -94,19 +95,19 @@ akka {
       # throughput = 10
     # }    
 
-    #deployment {
+    deployment {
       
-      #/avatars/Avatars_upload-workers {
+      /avatars/Avatars_upload-workers {
         
-        #router = random-pool
+        router = random-pool
         
-        #nr-of-instances = 4
+        nr-of-instances = 4
         
-        #pool-dispatcher {
-         # type = BalancingDispatcher
-        #}
-      #}
-    #}  
+        pool-dispatcher {
+          type = BalancingDispatcher
+        }
+      }
+    }  
   }
 }
 
